[gd_scene load_steps=2 format=1]

[ext_resource path="res://main_menu/multi_menu/network_menu/network_menu.gd" type="Script" id=1]

[node name="network_menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="panel_server" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 210.0
margin/bottom = 410.0

[node name="label_server" type="Label" parent="panel_server"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 50.0
margin/bottom = 24.0
text = "Server"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_port" type="Label" parent="panel_server"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 100.0
margin/right = 50.0
margin/bottom = 114.0
text = "Port:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text_edit_port" type="TextEdit" parent="panel_server"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 125.0
margin/right = 90.0
margin/bottom = 150.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="button_start_server" type="Button" parent="panel_server"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 225.0
margin/right = 74.0
margin/bottom = 245.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="button_stop_server" type="Button" parent="panel_server"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 225.0
margin/right = 94.0
margin/bottom = 245.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Stop"
flat = false

[node name="panel_client" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 10.0
margin/right = 610.0
margin/bottom = 410.0

[node name="label_client" type="Label" parent="panel_client"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 50.0
margin/bottom = 24.0
text = "Client"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_ip_addr" type="Label" parent="panel_client"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 100.0
margin/right = 50.0
margin/bottom = 114.0
text = "Ip Addr:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text_edit_ip_addr" type="TextEdit" parent="panel_client"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 125.0
margin/right = 90.0
margin/bottom = 150.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="label_port" type="Label" parent="panel_client"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 150.0
margin/right = 50.0
margin/bottom = 164.0
text = "Port:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text_edit_port" type="TextEdit" parent="panel_client"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 175.0
margin/right = 90.0
margin/bottom = 200.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="button_connect_client" type="Button" parent="panel_client"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 225.0
margin/right = 74.0
margin/bottom = 245.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Connect"
flat = false

[node name="button_disconnect_client" type="Button" parent="panel_client"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 225.0
margin/right = 94.0
margin/bottom = 245.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Disconnect"
flat = false

[connection signal="pressed" from="panel_server/button_start_server" to="." method="_on_button_start_server_pressed"]

[connection signal="pressed" from="panel_server/button_stop_server" to="." method="_on_button_stop_server_pressed"]

[connection signal="pressed" from="panel_client/button_connect_client" to="." method="_on_button_connect_client_pressed"]

[connection signal="pressed" from="panel_client/button_disconnect_client" to="." method="_on_button_disconnect_client_pressed"]


